# Im8086

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  REQs  check_opengl.sh  imgui.ini  migrate_to_cmake.sh  setup_gui.sh  test_gui.sh
.github/workflows/: build-and-release.yml  build.yml  builder.yml  c-cpp.yml  ci.yml  makefile.yml
include/: Registers.h  emulator8086.h  ide_tui.h  image_loader.h  imgui_file_dialog.h  memory_components.h  opengl_modern.h  platform_dialogs.h  platform_opengl.h  registers.h  stb_image_impl.h  theme_detector.h  tui.h  version.h  windows_platform.h
include/gui/: gui_application.h  splash_window.h
include/instructions/: arithmetic.h  bit_manipulation.h  data_transfer.h  logical.h  processor_control.h  program_transfer.h  string.h
samples/: README.md  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt
samples/tui/: sample_01.asm  sample_02.asm  sample_03.asm  sample_04.asm  sample_05.asm  sample_06.asm  sample_07.asm  sample_08.asm  sample_09.asm  sample_10.asm  sample_11.asm  sample_12.asm  sample_13.asm  sample_14.asm  sample_15.asm  sample_16.asm  sample_17.asm  sample_18.asm  sample_19.asm  sample_20.asm  sample_21.asm  sample_22.asm  sample_23.asm  sample_24.asm  sample_25.asm  test_ide.asm  test_stack.asm  test_stack_comprehensive.asm  test_tui.asm
scripts/: build_portable.sh  build_static.sh  build_ultra_portable.sh  build_windows_portable.bat  check_opengl.sh  setup_gui.sh  test_gui.sh
src/: Registers.cpp  Registers.py  emulator8086.cpp  ide_tui.cpp  image_loader.cpp  imgui_file_dialog.cpp  main.cpp  memory_components.cpp  platform_dialogs.cpp  theme_detector.cpp  tui.cpp
src/gui/: gui_application.cpp  main_gui.cpp  splash_window.cpp  test_gui_integration.cpp
src/instructions/: arithmetic.cpp  bit_manipulation.cpp  data_transfer.cpp  logical.cpp  processor_control.cpp  program_transfer.cpp  string.cpp
tests/: test_emulator.cpp  test_framework.h  test_gui.cpp  test_opengl_headers.cpp
